# CS316Spring2024

./: CMakeLists.txt
quiz/: quiz3.cpp  quiz5.cpp
section5/: main.cpp  test.cpp  test2.cpp
section6/: ClientData.cpp  ClientData.h  Fig14_10.cpp  Fig14_11.cpp  Fig14_12.cpp  Fig14_13.cpp
section7/: reading_from_file.cpp  writting_to_file.cpp
section7_g2/: reading_from_file.cpp  test_data.txt  writting_to_file.cpp
section8_g1/: reading_from_file.cpp  var_object.cpp
section8_g2/: test_data.cpp
section9/: sec9.cpp
